--- a/lang/pt_BR.json
+++ b/lang/pt_BR.json
@@ -50,7 +50,7 @@
   "Forgot your password?": "Esqueceu sua senha?",
   "Forgot your password? No problem. Just let us know your email address and we will email you a password reset link that will allow you to choose a new one.": "Esqueceu sua senha? Sem problemas. Apenas informe seu endereço de e-mail que enviaremos um link que permitirá definir uma nova senha.",
   "Hello!": "Olá!",
-  "Home": "Principal",
+  "Home": "Home",
   "I agree to the :terms_of_service and :privacy_policy": "Eu concordo com os :terms_of_service e com a :privacy_policy",
   "If necessary, you may log out of all of your other browser sessions across all of your devices. Some of your recent sessions are listed below; however, this list may not be exhaustive. If you feel your account has been compromised, you should also update your password.": "Se necessário, você pode sair de todas as outras sessões do navegador em todos os seus dispositivos. Algumas de suas sessões recentes estão listadas abaixo; no entanto, esta lista pode não ser exaustiva. Se você acha que sua conta foi comprometida, você também deve atualizar sua senha.",
   "If you already have an account, you may accept this invitation by clicking the button below:": "Se já tiver uma conta, você pode aceitar esse convite através do botão abaixo:",
